----------------------------------------------------------------------
 OmegaT 5.8.0
----------------------------------------------------------------------
  14 Enhancements
  12 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
5.8.0 vs 5.7.1

  Bug fixes:

  - CLI commands does not expand tilde(~) to home directory
  https://sourceforge.net/p/omegat/bugs/1106/

  - PO filter: target files should not keep #| msgctxt
  https://sourceforge.net/p/omegat/bugs/1103/

  - Paragraph marks not showing when loading partial pages-
  https://sourceforge.net/p/omegat/bugs/1102/

  - No ID-bound matching in /tm/tmx2source
  https://sourceforge.net/p/omegat/bugs/1101/

  - Searcher to show path in relative
  https://sourceforge.net/p/omegat/bugs/1099/
  https://sourceforge.net/p/omegat/bugs/1098/

  - Enforced ID-bound alternative translations not recognized
  https://sourceforge.net/p/omegat/bugs/1092/

  - ArrayIndexOutOfBoundsException on loading a PO-project with multi-line plurals
  https://sourceforge.net/p/omegat/bugs/1082/

  - Team projects fail to commit with enabled signing
  https://sourceforge.net/p/omegat/bugs/1077/

  - Dictionary fails to jump to selected word
  https://sourceforge.net/p/omegat/bugs/1074/

  - Highlight found text even if normalized text (for feature "full/half width insensitive") 
    differs from original

  - Display other language translations also for alternative translations
  https://sourceforge.net/p/omegat/bugs/1101/

  Implemented requests:

  - Support Git branch in Team Project
  https://sourceforge.net/p/omegat/feature-requests/918/

  - New project properties options for export TM directory and which TMs should be exported
  https://sourceforge.net/p/omegat/feature-requests/1611/

  - Option to export project's master TMs when pressing Ctrl+D
  https://sourceforge.net/p/omegat/feature-requests/1591/

  - Changing the flow of updating teamwork omegat.project
