@@ -165,14 +165,21 @@ dependencies {
         implementation "org.apache.lucene:lucene-analyzers-stempel:${luceneVersion}"
 
         // Team project server support
-        implementation 'org.eclipse.jgit:org.eclipse.jgit:5.11.1.202105131744-r'
-        implementation 'org.eclipse.jgit:org.eclipse.jgit.ssh.jsch:5.11.1.202105131744-r'
-        implementation 'com.jcraft:jsch.agentproxy.jsch:0.0.9'
-        // Specify the following two here just to make sure all jsch.agentproxy libs are the same version.
-        implementation 'com.jcraft:jsch.agentproxy.connector-factory:0.0.9'
-        implementation 'com.jcraft:jsch.agentproxy.svnkit-trilead-ssh2:0.0.9'
+        implementation 'org.eclipse.jgit:org.eclipse.jgit:5.13.1.202206130422-r'
+        // Original JSch is unmaintained and dead, so we use forked version, mwiede/jsch
+        // to fix BUGS#1075, and to support elliptic curve ciphers and improved ssh agent
+        implementation 'com.github.mwiede:jsch:0.2.3'
+        // https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit.ssh.jsch
+        implementation ('org.eclipse.jgit:org.eclipse.jgit.ssh.jsch:5.13.1.202206130422-r') {
+            exclude module: 'jsch'
+        }
+        // For ed25519 and ecdsa support of jsch, java16+ or BC
+        implementation 'org.bouncycastle:bcprov-jdk15on:1.69'
+        // For ssh agent support of jsch, Java16+ or junixsocket
+        implementation 'com.kohlschutter.junixsocket:junixsocket-core:2.4.0'
         // For gpg signing
         implementation 'org.eclipse.jgit:org.eclipse.jgit.gpg.bc:5.11.1.202105131744-r'
+        // For subversion
         implementation 'org.tmatesoft.svnkit:svnkit:1.8.14'
 
         // Team project conflict resolution
